修改可用元数据

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ def pluginClass = "com.akikiri.MainPlugin"
 def pluginId = "akikiri_LastFm_scrobble"
 def pluginVersion = "0.0.1"
 def pluginProvider = "akikiri"
+def PluginOpenSourceUrl="https://github.com/akikiri/LastFmForSaltPlayer"
+def PluginDescription="LastFmForSaltPlayer"
 
 tasks.named("jar") {
     manifest {
